Intro block horizontal scroll fixes

--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -1,5 +1,6 @@
 .intro__subtitle {
   margin: 40px 148px 0;
+  max-width: 690px;
   font-size: 24px;
   line-height: 34px;
 }
@@ -15,6 +16,7 @@
 @media screen and (max-width: 1023px) {
   .intro__subtitle {
     margin: 40px 24px 0;
+    max-width: none;
   }
 }
 
