--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,5 +1,6 @@
 .intro__text {
   margin: 32px 148px 0;
+  max-width: 690px;
   font-size: 16px;
   line-height: 1.63;
 }
@@ -14,6 +15,8 @@
 @media screen and (max-width: 1023px) {
   .intro__text {
     margin: 32px 24px 0;
+    max-width: none;
+
   }
 }
 
