--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,6 @@
 .intro__title {
-  max-width: 690px;
   margin: 0 148px;
-  width: 100%;
+  max-width: 690px;
   font-size: 54px;
   font-weight: 900;
   line-height: 58px;
@@ -16,13 +15,12 @@
 @media screen and (max-width: 1023px) {
   .intro__title {
     margin: 0 24px;
-    max-width: 720px;
+    max-width: none;
   }
 }
 
 @media screen and (max-width: 767px) {
   .intro__title {
-    max-width: 288px;
     margin: 0 16px;
     font-size: 32px;
     line-height: 35px;
