--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,22 +1,25 @@
 .lead__image {
   margin: 56px 148px 0;
+  min-height: 615px;
 }
 
 @media screen and (max-width: 1279px) {
   .lead__image {
     margin: 56px 48px 0;
+    min-height: 580px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lead__image {
     margin: 56px 0 0;
+    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .lead__image {
     margin: 40px 0;
-    object-fit: cover;
+    min-height: 200px;
   }
 }
