--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,7 +9,7 @@
 @media screen and (max-width: 767px) {
   .lead__subtitle {
     margin: 16px auto 0;
-    max-width: 288px;
+    max-width: none;
     font-size: 16px;
     line-height: 20px;
   }
